--- a/themes/octopress/templates/_includes/head.html
+++ b/themes/octopress/templates/_includes/head.html
@@ -32,4 +32,6 @@
         rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic"
         rel="stylesheet" type="text/css">
+
+  {{ EXTRA_HEADER }}
 </head>
