use the article title as page title if present

--- a/themes/octopress/templates/_includes/head.html
+++ b/themes/octopress/templates/_includes/head.html
@@ -4,7 +4,13 @@
 <!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}{{ SITENAME }}{% endblock %}</title>
+  <title>{% block title %}
+  {% if article %}
+      {{ article.title|striptags }}
+  {% else %}
+      {{ SITENAME }}
+  {% endif %}
+  {% endblock %}</title>
   <meta name="author" content="{{ AUTHOR }}">
 
   {% if FEED_ATOM %}
